[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "1.8.3"
name = "maelzel"
description = "Framework for computer music and composition"
authors = [
    { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" },
]
license = { file = "LICENSE.md" }
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'Topic :: Multimedia :: Sound/Audio',
]


dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "appdirs",
    "tabulate",
    "cachetools",
    "pyyaml",
    "psutil",
    "lxml",
    "quicktions",
    "rich",
    "chardet",
    "simple-term-menu",
    "visvalingamwyatt",
    "pybase64",
    # "distro",
    "thefuzz",
    # "resampy",  # Do not include it by default, since this pulls numba
    "soxr",
    "python-constraint",
    "pillow<11",
    "sounddevice",
    "typing_extensions",
    "imagesize",
    "pypng",

    # Own libraries
    "emlib>=1.18.2",
    "libcsound>=0.10.8",
    "bpf4>=1.14.0",
    "configdict>=2.13",
    "sndfileio>=1.9.1",
    "numpyx>=1.4.1",
    "csoundengine>=2.19.14",
    "pitchtools>=1.16.0",
    "risset>=3.2.0",
    "loristrck>=1.6.1",
    "vamphost>=1.3.0",
    "lilyponddist>=1.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["maelzel", "maelzel.*"]
exclude = ["docs", "notebooks", "test", "scripts"]


[tool.setuptools.package-data]
maelzel = ['maelzel/data']


[project.urls]
"Homepage" = "https://github.com/gesellkammer/maelzel"


[tool.ruff.lint]
# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501", "I001", "E402"]

